# School-Portal-Reporting

./: .gitignore  README.md  TODO.md  courses.html  pyproject.toml  send_email.js  test_emailer.py  test_send_emailjs.py
config/: config.yaml.example
reports/: Noah_Cooksey.csv  Olivia_Cooksey.csv
src/: emailer.py  main.py  scheduler.py  scraper.py  utils.py
